recursion.lessons.recursion.koch.Koch.scala.error
Koch:15: error: not found: value snowSide
snowSide(levels, length);
^Koch:19: error: not found: value snowSide
snowSide(levels, length);
^Koch:22: error: not found: value snowSide
snowSide(levels, length);
^